# vcpkg-test-repo

./: CMakeLists.txt  LICENSE  README.md  vcpkg.json
cmake/: vcpkg-test-package-config.cmake.in
include/vcpkg-test-package/: vcpkg-test-package.h
